cmake_minimum_required(VERSION 3.30)
project(POO_Projeto_2024_25)

set(CMAKE_CXX_STANDARD 20)

add_executable(POO_Projeto_2024_25
        Mapa.cpp
        Mapa.h
        Buffer.cpp
        Buffer.h
        Comandos.cpp
        Caravana.cpp
        Comandos.h
        Caravana.h
        Simulador.cpp
        Simulador.h
        Caravana.cpp
        Caravana.h
        Cidade.cpp
        Cidade.h
        Item.cpp
        Item.h
        CBarbaras.cpp
        CBarbaras.h
        PandoraItem.cpp
        PandoraItem.h
        ArcaTesouroItem.cpp
        ArcaTesouroItem.h
        JaulaItem.cpp
        JaulaItem.h
        MinaItem.cpp
        MinaItem.h
        CComercio.cpp
        CComercio.h
        CMilitar.cpp
        CMilitar.h
        Oasis.cpp
        Oasis.h
)
